methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:8: error: expected class or object definition
def dessine() {
^PictureMono1:10: error: Unmatched closing brace '}' ignored here
  }
  ^